--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -42,7 +42,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Abstract
 
-Digital Government is a growing and vibrant multidisciplinary field of research, the fast increase in research output has challenged researchers to explore and use novel computational ways and methods to perform evidence synthesis on the extant literature and be able to map a scientific discipline, explore the thematic evolution over time and identify potential avenues for further research. Topic modeling has emerged as a powerful technique from the computer science field that is contributing to the examination of large amounts of text data. This manuscript demonstrates the training of a topic model aimed to assemble a 'smart literature review' on a subset of the Digital Government Reference Library (DGRL) version 17.5. Structural topic modeling is a conceptual and methodological evolution of 'vanilla' topic modeling that allow the estimation of covariates contained in the metadata of corpora to calculate topic prevalence in a corpus. To our best knowledge, this is the first attempt to use unsupervised machine learning techniques with this data set. This effort may contribute to creating a map of the field, identify the evolving themes in the literature and help to identify promising areas of research.
+Digital Government is a growing and vibrant multidisciplinary field of research, the fast increase in research output has challenged researchers to explore and use novel computational ways and methods to perform evidence synthesis on the extant literature and be able to map a scientific discipline, explore the thematic evolution over time and identify potential avenues for further research. Topic modeling has emerged as a powerful technique from the computer science field that is contributing to the examination of large amounts of text data. This manuscript demonstrates the training and testing of a structural topic model aimed to assemble a 'smart literature review' on a subset of the Digital Government Reference Library (DGRL) version 17.5. Structural topic modeling is a conceptual and methodological evolution of 'vanilla' topic modeling that allow the estimation of covariates contained in the metadata of corpora to calculate topic prevalence in a corpus. To our best knowledge, this is the first attempt to use unsupervised machine learning techniques with this data set. This effort may contribute to creating a map of the field, identify the evolving themes in the literature and help to identify promising areas of research.
 
 Findings?
 
@@ -139,7 +139,7 @@ The download package contains three types of bibliographic files BibTeX, RIS, an
 
 The following variables have been deemed of interest for the analysis: type of reference (conference paper or journal article), year of publication, author, document title, publication title and the presence of an abstract. Text is a type of unstructured data that requires meticulous processing before using it. For replicability purposes, the script for the initial data cleaning and wrangling, including the R functions and packages used is available for revision, clarity, and replicability purposes and made publicly available in the scripts section of the [GitHub](https://github.com/aguileracastillo/topic_model) repository for this project.
 
-After the initial data wrangling, the relevant data for 6682 journal articles or approximately 80.7% of the total number of articles in the DGRL v17.5 is further processed to create a corpus, the initial step towards a topic model. Then, documents published before year 2000 were dropped from further analysis due to their negligible quantity, also a single observation from year 2022. A visualization in the publication trend demonstrate an incipient increase in number of journal articles after year 2000 and a steep increase in the beginning of the 2010 decade to present.
+After the initial data wrangling, the relevant data for 6682 journal articles or approximately 80.7% of the total number of articles in the DGRL v17.5 is further processed to create a corpus, the initial step towards a topic model. Documents published before year 2000 were dropped from further analysis due to their negligible quantity, also a single observation from year 2022, this reduced the corpus to be analyzed slightly to 6664 documents. A visualization in the publication trend demonstrate an incipient increase in number of journal articles after year 2000 and a steep increase in the beginning of the 2010 decade to present.
 
 ```{r articles by year, echo = FALSE, include = TRUE, fig.align = "center", out.width= "75%"}
 ## Insert from 02_topic_model script
@@ -191,11 +191,18 @@ The trigram "technolog_accept_model" refers to the technology acceptance model f
 
 The next step in the process is to create a Document-Feature Matrix, which is the method to provide a structure to the text and be able to conduct the quantitative analysis of the corpus. From this step in the process we gather that the corpus under study contains 6664 documents (abstracts) with their respective metadata and 18749 features (unique tokenized words). This is a very sparse matrix and the logical step is to conduct two process for dimensionality reduction: remove very common and very rare words. For the removal of rare words, the parameter was set to retain words with a minimum term frequency of 100, for the most common words, the criteria was to remove words that appears in more than 10% of the documents in the corpus. After these decisions the number of documents remain the same, the number of features, the vocabulary that will be used for the topic model, was reduced to 916. The documented code for these steps can be found in the GitHub page for this project for replicability purposes.
 
-One crucial step before the initial calibration of the model is to split the data between a train and a test set, the results presented in this manuscript are from the 75% of the training set sample. The remaining 25% is unseen data to be tested with the calibrated parameters of the training of the model. The novelty of the structural topic model is possibility to include covariates found in the metadata to estimate topic prevalence, for our analysis the year of publication as covariate of interest.
+One crucial step before the initial calibration of the model is to split the data between a train and a test set, the model was trained with the 75% of the sample. The remaining 25% is used to apply the model to the unseen data with the calibrated parameters of the training of the model. The novelty of the structural topic model is possibility to include covariates found in the metadata to estimate topic prevalence, for our analysis the year of publication as covariate of interest.
 
-The stm package includes the function searchK() that performs the estimation models with different K values to provide statistical analysis for goodness of fit measures in topic modeling. Perplexity, semantic coherence, residuals and lower bound can be visualized as a result of this function thus helping researchers to select the optimal number of topics. However, statistical goodness of fit is not enough and it is widely advised to apply human validation and human judgement in the decision of the number of topics to model.
+The stm package includes the function searchK() that performs the estimation models with different K values to provide statistical analysis for goodness of fit measures in topic modeling. Perplexity, semantic coherence, residuals and lower bound can be estimated and visualized helping researchers to select the optimal number of topics in a data driven manner. However, statistical goodness of fit is not enough and it is widely advised to apply human validation and human judgement in the decision of the number of topics to model.
 
-The following graphic show the diverse goodness of fit measures calculated for different values for K in a range from 25 to 60 topics that can be used for hints for further exploration and analysis, the values for held-out likelihood, or perplexity seem to be optimal for x values, semantic coherence is higher in topics X, Y and Z, the residuals values above 1 indicate sample dispersion that is interpreted as the number of K is too low, the lower bound value indicate model convergence, small changes between the compared values are preferred.
+The following graphic shows the visualization of the results of the function searchK from the stm package, four goodness of fit measures are calculated for different values for K in a range from 25 to 60 topics. The values for held-out likelihood, or perplexity seem to be optimal in this range at k=53, semantic coherence is higher in k=44, k=53, and k=60, residuals values above 1 indicate sample dispersion meaning that the number for k is set too low, after several iterations with the training set, k=53 is deemed optimal for further analysis. The lower bound value indicate model convergence, small changes between the compared values are preferred.
+
+```{r , echo=FALSE, out.width="100%", warning=FALSE, fig.cap ="Comparative Goodness of Fit Measures for Different values for K"}
+
+knitr::include_graphics(here("graphics", "data_driven_K.png"))
+```
+
+The different indicators for goodness of fit and the iterative revision of these parameters with the training set led us to choose k=53 as an optimal number of topics to use with the unseen data. The code for the test set is in a separate script and can be found in the GitHub repository for this project.
 
 ## Discussion
 
