--- a/script/references.bib
+++ b/script/references.bib
@@ -1749,3 +1749,16 @@ type: article},
 	doi = {10.1016/J.GIQ.2014.10.003},
 	note = {Publisher: JAI}
 }
+
+@inproceedings{sievert2014,
+	title = {Proceedings of the Workshop on Interactive Language Learning, Visualization, and Interfaces},
+	author = {Sievert, Carson and Shirley, Kenneth},
+	year = {2014},
+	date = {2014},
+	publisher = {Association for Computational Linguistics},
+	pages = {63--70},
+	doi = {10.3115/v1/W14-3110},
+	url = {http://aclweb.org/anthology/W14-3110},
+	address = {Baltimore, Maryland, USA},
+	langid = {en}
+}
