--- a/script/references.bib
+++ b/script/references.bib
@@ -1762,3 +1762,166 @@ type: article},
 	address = {Baltimore, Maryland, USA},
 	langid = {en}
 }
+
+@article{kopelman2016,
+	title = {Are Public Sector Jobs Recession-proof? Were They Ever?},
+	author = {Kopelman, Jason L. and Rosen, Harvey S.},
+	year = {2016},
+	month = {05},
+	date = {2016-05-06},
+	journal = {Public Finance Review},
+	pages = {370--396},
+	volume = {44},
+	number = {3},
+	doi = {10.1177/1091142114565042},
+	url = {http://journals.sagepub.com/doi/10.1177/1091142114565042},
+	note = {Publisher: SAGE Publications Inc.}
+}
+
+@article{scupola2016,
+	title = {Governance and innovation in public sector services: The case of the digital library},
+	author = {Scupola, Ada and Zanfei, Antonello},
+	year = {2016},
+	date = {2016},
+	journal = {Government Information Quarterly},
+	pages = {237--249},
+	volume = {33},
+	number = {2},
+	doi = {10.1016/j.giq.2016.04.005},
+	url = {http://www.sciencedirect.com/science/article/pii/S0740624X16300351},
+	note = {Type: Journal Article}
+}
+
+@article{kim2021,
+	title = {Platform Government in the Era of Smart Technology},
+	author = {Kim, Soonhee and Andersen, Kim Normann and Lee, Jungwoo},
+	year = {2021},
+	month = {08},
+	date = {2021-08-11},
+	journal = {Public Administration Review},
+	doi = {10.1111/PUAR.13422},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/puar.13422},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{kim2021a,
+	title = {Platform Government in the Era of Smart Technology},
+	author = {Kim, Soonhee and Andersen, Kim Normann and Lee, Jungwoo},
+	year = {2021},
+	month = {08},
+	date = {2021-08},
+	journal = {Public Administration Review},
+	doi = {10.1111/PUAR.13422},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/puar.13422 https://onlinelibrary.wiley.com/doi/abs/10.1111/puar.13422 https://onlinelibrary.wiley.com/doi/10.1111/puar.13422},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{pencheva2020,
+	title = {Big Data and AI {\textendash} A transformational shift for government: So, what next for research?},
+	author = {Pencheva, Irina and Esteve, Marc and Mikhaylov, Slava Jankin},
+	year = {2020},
+	month = {01},
+	date = {2020-01},
+	journal = {Public Policy and Administration},
+	pages = {24--44},
+	volume = {35},
+	number = {1},
+	doi = {10.1177/0952076718780537},
+	url = {http://journals.sagepub.com/doi/10.1177/0952076718780537},
+	note = {Publisher: SAGE Publications Ltd}
+}
+
+@article{lloyd2019,
+	title = {Rethinking country effects: robotics, AI and work futures in Norway and the UK},
+	author = {Lloyd, Caroline and Payne, Jonathan},
+	year = {2019},
+	date = {2019},
+	journal = {New Technology, Work and Employment},
+	volume = {34},
+	number = {3},
+	doi = {10.1111/ntwe.12149}
+}
+
+@article{klein2021a,
+	title = {The (re-)configuration of digital work in the wake of profound technological innovation: Constellations and hidden work},
+	author = {Klein, Stefan and Watson-Manheim, Mary Beth},
+	year = {2021},
+	month = {12},
+	date = {2021-12},
+	journal = {Information and Organization},
+	pages = {100377},
+	volume = {31},
+	number = {4},
+	doi = {10.1016/J.INFOANDORG.2021.100377},
+	note = {Publisher: Pergamon}
+}
+
+@article{wirtz2018,
+	title = {An integrated artificial intelligence framework for public management},
+	author = {Wirtz, Bernd W. and {Müller}, Wilhelm M.},
+	year = {2018},
+	month = {07},
+	date = {2018-07-03},
+	journal = {Public Management Review},
+	pages = {1076--1100},
+	volume = {21},
+	number = {7},
+	doi = {10.1080/14719037.2018.1549268},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/14719037.2018.1549268},
+	note = {Publisher: Routledge}
+}
+
+@article{wirtz2021,
+	title = {Artificial Intelligence in the Public Sector - a Research Agenda},
+	author = {Wirtz, Bernd W. and Langer, Paul F. and Fenner, Carolina},
+	year = {2021},
+	date = {2021},
+	journal = {International Journal of Public Administration},
+	doi = {10.1080/01900692.2021.1947319},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/01900692.2021.1947319},
+	note = {Publisher: Routledge}
+}
+
+@article{zuiderwijk2021,
+	title = {Implications of the use of artificial intelligence in public governance: A systematic literature review and a research agenda},
+	author = {Zuiderwijk, Anneke and Chen, Yu Che and Salem, Fadi},
+	year = {2021},
+	month = {07},
+	date = {2021-07-01},
+	journal = {Government Information Quarterly},
+	pages = {101577},
+	volume = {38},
+	number = {3},
+	doi = {10.1016/J.GIQ.2021.101577},
+	note = {Publisher: JAI}
+}
+
+@article{akter2022,
+	title = {Transforming business using digital innovations: the application of AI, blockchain, cloud and data analytics},
+	author = {Akter, Shahriar and Michael, Katina and Uddin, Muhammad Rajib and McCarthy, Grace and Rahman, Mahfuzur},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	journal = {Annals of Operations Research},
+	pages = {7--39},
+	volume = {308},
+	number = {1-2},
+	doi = {10.1007/s10479-020-03620-w},
+	url = {https://link.springer.com/10.1007/s10479-020-03620-w},
+	langid = {en}
+}
+
+@article{akter2022a,
+	title = {Transforming business using digital innovations: the application of AI, blockchain, cloud and data analytics},
+	author = {Akter, Shahriar and Michael, Katina and Uddin, Muhammad Rajib and McCarthy, Grace and Rahman, Mahfuzur},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	journal = {Annals of Operations Research},
+	pages = {7--39},
+	volume = {308},
+	number = {1-2},
+	doi = {10.1007/s10479-020-03620-w},
+	url = {https://link.springer.com/10.1007/s10479-020-03620-w},
+	langid = {en}
+}
